<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner_dialog"
    android:paddingBottom="20dp"

    >
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_close"
        android:background="@android:color/transparent"
        android:id="@+id/closeImageButton"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/rounded_corner_edit_text"
        android:hint="@string/old_password"
        android:textColorHint="@color/colorSplashBackground"
        android:textColor="@color/colorMainBackground"
        android:textSize="15sp"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:id="@+id/oldPasswordEditText"
        />
    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/rounded_corner_edit_text"
        android:hint="@string/new_password"
        android:textColorHint="@color/colorSplashBackground"
        android:textColor="@color/colorMainBackground"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:id="@+id/newPasswordEditText"
        />
    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/rounded_corner_edit_text"
        android:hint="@string/_confirm_password"
        android:textColorHint="@color/colorSplashBackground"
        android:textColor="@color/colorMainBackground"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:id="@+id/confirmNewPasswordEditText"
        />
    <Button
        android:text="@string/submit"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:id="@+id/submitButton_changePassword"
        android:background="@drawable/rounded_corrner_button_green"
        android:textColor="@color/colorSplashBackground"
        android:textSize="20sp"
        android:layout_marginLeft="5dp"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />


</LinearLayout>