<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirm_phone_pin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    tools:context="com.sproutonecard.rechargeandreward.ui.activity.ConfirmPhonePinActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:weightSum="2"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verify_user"
                    android:textSize="30sp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="10"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/please_enter_mobile_phone"
                    android:maxLines="100"
                    android:textSize="15sp"
                    android:lines="2"
                    android:textColor="@color/colorGreenBacground"
                    android:gravity="center"
                    />





            </RelativeLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical"
            android:background="@color/colorMainBackground"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:weightSum="10"

            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_corner_edit_text"
                    android:hint="@string/mobile_phone_number"
                    android:textColorHint="@color/colorSplashBackground"
                    android:textSize="15sp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textColor="@color/colorMainBackground"
                    android:inputType="text"
                    android:id="@+id/phoneNumberEditText_verifyUser"/>
                <EditText
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_corner_edit_text"
                    android:hint="@string/mobile_pin"
                    android:textColorHint="@color/colorSplashBackground"
                    android:textSize="15sp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textColor="@color/colorMainBackground"
                    android:inputType="text"
                    android:id="@+id/pinNumberEditText_verityUser"/>



            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:text="@string/cancel"
                    android:layout_width="140dp"
                    android:layout_height="45dp"
                    android:id="@+id/cancelButton_verifyUser"
                    android:background="@drawable/rounded_cancel_button"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textColor="@color/colorSplashBackground"/>
                <Button
                    android:text="@string/submit"
                    android:layout_width="140dp"
                    android:layout_height="45dp"
                    android:id="@+id/submitButton_verifyUser"
                    android:background="@drawable/rounded_corrner_button_green"
                    android:textColor="@color/colorSplashBackground"
                    android:textSize="20sp"
                    android:layout_marginLeft="5dp"
                    android:textAllCaps="false"
                    />


            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
